--- a/json/activity_types.properties
+++ b/json/activity_types.properties
@@ -8,6 +8,7 @@ activity_type_bmx=BMX
 activity_type_boating=Boating
 activity_type_casual_walking=Casual Walking
 activity_type_cross_country_skiing=Cross Country Classic Skiing
+cross_country_skiing=Cross Country Skiing
 activity_type_cycling=Cycling
 activity_type_cyclocross=Cyclocross
 activity_type_downhill_biking=Downhill Biking
@@ -113,3 +114,10 @@ activity_type_skate_skiing_ws=Cross Country Skate Skiing
 activity_type_skating_ws=Skating
 activity_type_snow_shoe_ws=Snowshoeing
 activity_type_snowmobiling_ws=Snowmobiling
+activity_type_indoor_climbing=Indoor Climbing
+activity_type_bouldering=Bouldering
+activity_type_offshore_grinding=Offshore Grinding
+activity_type_onshore_grinding=Onshore Grinding
+activity_type_ultra_run=Ultra Running
+activity_type_hiit=HIIT
+activity_type_e_sport=Esports
